Updates pages/Java_8.md
Auto commit by GitBook Editor